added slider to desktop

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600", rel="stylesheet")
 		link(rel="stylesheet", type="text/css", href="css/normalize.css")
+		link(rel="stylesheet", href="css/wallop.css")
 		link(rel="stylesheet", type= "text/css", href="css/style.css")
 	body
 		header(class="header")
@@ -47,16 +48,23 @@ html(lang="en")
 				div(class="time-left icon icon--clock")
 					span(class="time-left__text") До конца распродажи
 					span(class="time-left__time") 3 дня, 15:37:01
-				div(class="photo")
-					div(class="photo__nav")
-						div(class="prev")
-						a(href="javascript:l_image ('images/photo1-min.jpg')", class="photo__nav-item nav-item--1 active")
-						a(href="javascript:l_image ('images/photo2-min.jpg')", class="photo__nav-item nav-item--2")
-						a(href="javascript:l_image ('images/photo3-min.jpg')", class="photo__nav-item nav-item--3")
-						a(href="javascript:l_image ('images/photo4-min.jpg')", class="photo__nav-item nav-item--4")
-						div(class="next")
-					div(class="photo__view")
-						img(src="images/photo1-min.jpg", name="example_img", class="photo__view-img")
+				div(class="photo Wallop")
+					div(class="Wallop-list")
+						div(class="Wallop-item Wallop-item--current")
+							img(src="images/photo1-min.jpg", alt="photo1", class="Wallop-item-img")
+						div(class="Wallop-item")
+							img(src="images/photo2-min.jpg", alt="photo2", class="Wallop-item-img")
+						div(class="Wallop-item")
+							img(src="images/photo3-min.jpg", alt="photo3", class="Wallop-item-img")
+						div(class="Wallop-item")
+							img(src="images/photo4-min.jpg", alt="photo4", class="Wallop-item-img")
+					div(class="Wallop-pagination")
+						button(class="Wallop-buttonPrevious")
+						button(class="Wallop-dot Wallop-dot--current Wallop-dot--1")
+						button(class="Wallop-dot Wallop-dot--2")
+						button(class="Wallop-dot Wallop-dot--3")
+						button(class="Wallop-dot Wallop-dot--4")
+						button(class="Wallop-buttonNext")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 						span(class="product__subtitle") Costa Patch Pocket Denim Top
@@ -285,4 +293,5 @@ html(lang="en")
 					div(class="credit")
 						img(src="images/credit-min.png", alt="credit", class="credit__img")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+		script(src="js/Wallop.min.js")
 		script(src="js/main.js")
