--- a/css/style.css
+++ b/css/style.css
@@ -1490,6 +1490,160 @@ html {
   height: 100%;
 }
 
+.Wallop {
+  max-width: 480px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+
+.Wallop-list {
+  margin: 15px;
+}
+
+.Wallop-item {
+  width: 481px;
+  height: 641px;
+}
+
+.Wallop-item-img {
+  width: 100%;
+  height: 100%;
+}
+
+.Wallop-pagination {
+  text-align: center;
+  width: 75px;
+}
+
+.Wallop-dot {
+  width: 62px;
+  height: 91px;
+  margin: 10px auto;
+  border: 2px solid transparent;
+  outline: none;
+}
+
+.Wallop-dot.Wallop-dot--1 {
+  background: url("../images/photo1-min.jpg") no-repeat;
+  background-size: 100%;
+}
+
+.Wallop-dot.Wallop-dot--2 {
+  background: url("../images/photo2-min.jpg") no-repeat;
+  background-size: 100%;
+}
+
+.Wallop-dot.Wallop-dot--3 {
+  background: url("../images/photo3-min.jpg") no-repeat;
+  background-size: 100%;
+}
+
+.Wallop-dot.Wallop-dot--4 {
+  background: url("../images/photo4-min.jpg") no-repeat;
+  background-size: 100%;
+}
+
+.Wallop-dot.Wallop-dot--current {
+  border: 2px solid #f68235;
+}
+
+.Wallop-dot:hover {
+  cursor: pointer;
+}
+
+.Wallop-buttonPrevious,
+.Wallop-buttonNext {
+  background-color: transparent;
+  border-color: transparent;
+  outline: none;
+  position: relative;
+  display: block;
+  margin: 20px auto;
+}
+
+.Wallop-buttonNext::after {
+  content: '';
+  position: absolute;
+  height: 16px;
+  width: 1px;
+  background-color: #d0d0d0;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.Wallop-buttonNext::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  border-top: solid 1px #d0d0d0;
+  border-right: solid 1px #d0d0d0;
+  -webkit-transform: translate(-50%, -50%) rotate(135deg);
+  transform: translate(-50%, -50%) rotate(135deg);
+}
+
+.Wallop-buttonNext:hover {
+  cursor: pointer;
+}
+
+.Wallop-buttonNext:hover::before {
+  border-color: #f68235;
+  cursor: pointer;
+}
+
+.Wallop-buttonNext:hover::after {
+  background-color: #f68235;
+  cursor: pointer;
+}
+
+.Wallop-buttonPrevious::after {
+  content: '';
+  position: absolute;
+  height: 16px;
+  width: 1px;
+  background-color: #d0d0d0;
+  top: 50%;
+  right: 50%;
+  -webkit-transform: translate(50%, -50%);
+  transform: translate(50%, -50%);
+}
+
+.Wallop-buttonPrevious::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  width: 10px;
+  height: 10px;
+  border-top: solid 1px #d0d0d0;
+  border-right: solid 1px #d0d0d0;
+  -webkit-transform: translate(50%, -50%) rotate(-45deg);
+  transform: translate(50%, -50%) rotate(-45deg);
+}
+
+.Wallop-buttonPrevious:hover {
+  cursor: pointer;
+}
+
+.Wallop-buttonPrevious:hover::before {
+  border-color: #f68235;
+  cursor: pointer;
+}
+
+.Wallop-buttonPrevious:hover::after {
+  background-color: #f68235;
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 426px) and (max-width: 768px) {
   .main {
     padding: 27px 20px;
