--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,6 +20,7 @@ $emphasize-text-color: #f68235;
 $disabled-text-color: #6d6d6d;
 $time-left-background-color: #e6e6e6;
 $clock-color1: #898989;
+$clock-color2: #7d7d7d;
 $inactive-arrow-color: #d0d0d0;
 $active-arrow-color: #f68235;
 $active-item-color: #f68235;
