--- a/views/mobile.pug
+++ b/views/mobile.pug
@@ -5,6 +5,7 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600", rel="stylesheet")
 		link(rel="stylesheet", type="text/css", href="css/normalize.css")
+		link(rel="stylesheet", href="css/wallop.css")
 		link(rel="stylesheet", type= "text/css", href="css/mob-style.css")
 	body
 		header(class="header")
@@ -43,14 +44,24 @@ html(lang="en")
 				span /
 				span(class="breadcrumbs__item") Costa Patch Pocket Denim Top
 			section(class="product", id="product")
-				div(class="photo")
-					div(class="photo__nav")
-						a(href="javascript:l_image ('images/photo1-min.jpg')", class="photo__nav-item nav-item--1 active")
-						a(href="javascript:l_image ('images/photo2-min.jpg')", class="photo__nav-item nav-item--2")
-						a(href="javascript:l_image ('images/photo3-min.jpg')", class="photo__nav-item nav-item--3")
-						a(href="javascript:l_image ('images/photo4-min.jpg')", class="photo__nav-item nav-item--4")
-					div(class="photo__view")
-						img(src="images/photo1-min.jpg", name="example_img", class="photo__view-img")
+				div(class="photo Wallop")
+					div(class="Wallop-list")
+						div(class="product__sale icon icon--clock")
+						div(class="Wallop-item Wallop-item--current")
+							img(src="images/photo1-min.jpg", alt="photo1", class="Wallop-item-img")
+						div(class="Wallop-item")
+							img(src="images/photo2-min.jpg", alt="photo2", class="Wallop-item-img")
+						div(class="Wallop-item")
+							img(src="images/photo3-min.jpg", alt="photo3", class="Wallop-item-img")
+						div(class="Wallop-item")
+							img(src="images/photo4-min.jpg", alt="photo4", class="Wallop-item-img")
+					div(class="Wallop-pagination")
+						button(class="Wallop-buttonPrevious")
+						div(class="Wallop-dot Wallop-dot--current")
+						div(class="Wallop-dot")
+						div(class="Wallop-dot")
+						div(class="Wallop-dot")
+						button(class="Wallop-buttonNext")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 						span(class="product__subtitle") Costa Patch Pocket Denim Top
@@ -242,4 +253,5 @@ html(lang="en")
 				div(class="credit")
 					img(src="images/credit-min.png", alt="credit", class="credit__img")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+		script(src="js/Wallop.min.js")
 		script(src="js/main-mob.js")
