--- a/css/style.css
+++ b/css/style.css
@@ -448,6 +448,18 @@ html {
   margin-top: 40px;
 }
 
+.product__sale {
+  position: absolute;
+  top: 0;
+  left: 27px;
+  z-index: 100;
+}
+
+.product__sale::before {
+  font-size: 27px;
+  color: #7d7d7d;
+}
+
 .product__title {
   margin: 0;
   color: #f68235;
@@ -464,116 +476,146 @@ html {
 }
 
 .photo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   width: 60%;
 }
 
-.photo__view {
-  width: 481px;
-  height: 641px;
-}
+/*.photo {
+	@include respond-to(tablets) {
+		flex-direction: column;
+		justify-content: flex-start;
+	}
 
-.photo__view-img {
-  width: 100%;
-  height: 100%;
-}
+	display: flex;
+	justify-content: space-between;
+	width: 60%;
+	&__view {
+		@include respond-to(tablets) {
+			order: 1;
+			width: 414px;
+			height: 553px;
+		}
 
-.photo__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
+		width: 481px;
+		height: 641px;
+		&-img {
+			@include image-fit;
+		}
+	}
+	&__nav {
+		@include respond-to(tablets) {
+			flex-direction: row;
+			order: 2;
+			height: 91px;
+			margin-top: 24px;
+			.prev {
+				width: 16px;
+				height: 1px;
+				margin: 50px 30px;
+				&::before {
+					top: -5px;
+					left: 1px;
 
-.photo__nav .prev {
-  position: relative;
-  width: 1px;
-  height: 16px;
-  margin: 0 auto;
-  margin-bottom: 5px;
-  background-color: #d0d0d0;
-}
+					transform: rotate(-135deg);
+				}
+			}
+			.next {
+				width: 16px;
+				height: 1px;
+				margin: 50px 30px;
+				&::before {
+					top: -5px;
+					left: 3px;
 
-.photo__nav .prev::before {
-  content: '';
-  position: absolute;
-  top: 1px;
-  left: -5px;
-  width: 10px;
-  height: 10px;
-  border-top: 1px solid #d0d0d0;
-  border-right: 1px solid #d0d0d0;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
+					transform: rotate(45deg);
+				}
+			}
+		}
 
-.photo__nav-item {
-  display: block;
-  width: 62px;
-  height: 91px;
-  margin: 10px auto;
-  border: 2px solid transparent;
-}
+		display: flex;
+		flex-direction: column;
+		.prev {
+			position: relative;
 
-.photo__nav-item.nav-item--1 {
-  background: url("../images/photo1-min.jpg") no-repeat;
-  background-size: 100%;
-}
+			width: 1px;
+			height: 16px;
+			margin: 0 auto;
+			margin-bottom: 5px;
 
-.photo__nav-item.nav-item--2 {
-  background: url("../images/photo2-min.jpg") no-repeat;
-  background-size: 100%;
-}
+			background-color: $inactive-arrow-color;
+			&::before {
+				content: '';
 
-.photo__nav-item.nav-item--3 {
-  background: url("../images/photo3-min.jpg") no-repeat;
-  background-size: 100%;
-}
+				position: absolute;
+				top: 1px;
+				left: -5px;
 
-.photo__nav-item.nav-item--4 {
-  background: url("../images/photo4-min.jpg") no-repeat;
-  background-size: 100%;
-}
+				width: 10px;
+				height: 10px;
+				border-top: 1px solid $inactive-arrow-color;
+				border-right: 1px solid $inactive-arrow-color;
 
-.photo__nav-item.active {
-  border: 2px solid #f68235;
-  background-size: 100%;
-}
+				transform: rotate(-45deg);
+			}
+		}
+		&-item {
+			display: block;
+			width: 62px;
+			height: 91px;
+			margin: 10px auto;
+			border: 2px solid transparent;
+			&.nav-item--1 {
+				background: url('../images/photo1-min.jpg') no-repeat;
+				background-size: 100%;
+			}
+			&.nav-item--2 {
+				background: url('../images/photo2-min.jpg') no-repeat;
+				background-size: 100%;
+			}
+			&.nav-item--3 {
+				background: url('../images/photo3-min.jpg') no-repeat;
+				background-size: 100%;
+			}
+			&.nav-item--4 {
+				background: url('../images/photo4-min.jpg') no-repeat;
+				background-size: 100%;
+			}
+			&.active {
+				border: 2px solid $active-item-color;
 
-.photo__nav-item:hover {
-  border: 2px solid #dedede;
-  cursor: pointer;
-}
+				background-size: 100%;
+			}
+			&:hover {
+				border: 2px solid $border-color;
 
-.photo__nav .next {
-  position: relative;
-  width: 1px;
-  height: 16px;
-  margin: 0 auto;
-  margin-bottom: 5px;
-  background-color: #f68235;
-}
+				cursor: pointer;
+			}
+		}
+		.next {
+			position: relative;
 
-.photo__nav .next::before {
-  content: '';
-  position: absolute;
-  top: 3px;
-  left: -5px;
-  width: 10px;
-  height: 10px;
-  border-top: 1px solid #f68235;
-  border-right: 1px solid #f68235;
-  -webkit-transform: rotate(135deg);
-  transform: rotate(135deg);
-}
+			width: 1px;
+			height: 16px;
+			margin: 0 auto;
+			margin-bottom: 5px;
+
+			background-color: $active-arrow-color;
+			&::before {
+				content: '';
+
+				position: absolute;
+				top: 3px;
+				left: -5px;
+
+				width: 10px;
+				height: 10px;
+				border-top: 1px solid $active-arrow-color;
+				border-right: 1px solid $active-arrow-color;
+
+				transform: rotate(135deg);
+			}
+		}
+	}
+}*/
 
 .description {
   width: 40%;
@@ -1143,7 +1185,6 @@ html {
 
 .item__img-image {
   width: 100%;
-  height: 100%;
 }
 
 .item__title {
@@ -1487,11 +1528,9 @@ html {
 
 .credit__img {
   width: 100%;
-  height: 100%;
 }
 
 .Wallop {
-  max-width: 480px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1503,6 +1542,7 @@ html {
 
 .Wallop-list {
   margin: 15px;
+  position: relative;
 }
 
 .Wallop-item {
@@ -1512,11 +1552,16 @@ html {
 
 .Wallop-item-img {
   width: 100%;
-  height: 100%;
 }
 
 .Wallop-pagination {
-  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 75px;
 }
 
@@ -1699,62 +1744,6 @@ html {
     font-size: 14px;
   }
 
-  .photo {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-  }
-
-  .photo__view {
-    -webkit-box-ordinal-group: 2;
-    -ms-flex-order: 1;
-    order: 1;
-    width: 414px;
-    height: 553px;
-  }
-
-  .photo__nav {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-ordinal-group: 3;
-    -ms-flex-order: 2;
-    order: 2;
-    height: 91px;
-    margin-top: 24px;
-  }
-
-  .photo__nav .prev {
-    width: 16px;
-    height: 1px;
-    margin: 50px 30px;
-  }
-
-  .photo__nav .prev::before {
-    top: -5px;
-    left: 1px;
-    -webkit-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-  }
-
-  .photo__nav .next {
-    width: 16px;
-    height: 1px;
-    margin: 50px 30px;
-  }
-
-  .photo__nav .next::before {
-    top: -5px;
-    left: 3px;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-
   .price--old {
     display: block;
     margin: 0;
@@ -1905,6 +1894,41 @@ html {
 
   .to-top {
     display: none;
+  }
+
+  .Wallop {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .Wallop-pagination {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    width: 100%;
+  }
+
+  .Wallop-buttonNext::after {
+    width: 16px;
+    height: 1px;
+  }
+
+  .Wallop-buttonNext::before {
+    -webkit-transform: translate(-50%, -50%) rotate(45deg);
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+
+  .Wallop-buttonPrevious::after {
+    width: 16px;
+    height: 1px;
+  }
+
+  .Wallop-buttonPrevious::before {
+    -webkit-transform: translate(50%, -50%) rotate(-135deg);
+    transform: translate(50%, -50%) rotate(-135deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
