--- a/views/index.pug
+++ b/views/index.pug
@@ -50,6 +50,7 @@ html(lang="en")
 					span(class="time-left__time") 3 дня, 15:37:01
 				div(class="photo Wallop")
 					div(class="Wallop-list")
+						div(class="product__sale icon icon--clock")
 						div(class="Wallop-item Wallop-item--current")
 							img(src="images/photo1-min.jpg", alt="photo1", class="Wallop-item-img")
 						div(class="Wallop-item")
@@ -60,10 +61,10 @@ html(lang="en")
 							img(src="images/photo4-min.jpg", alt="photo4", class="Wallop-item-img")
 					div(class="Wallop-pagination")
 						button(class="Wallop-buttonPrevious")
-						button(class="Wallop-dot Wallop-dot--current Wallop-dot--1")
-						button(class="Wallop-dot Wallop-dot--2")
-						button(class="Wallop-dot Wallop-dot--3")
-						button(class="Wallop-dot Wallop-dot--4")
+						div(class="Wallop-dot Wallop-dot--current Wallop-dot--1")
+						div(class="Wallop-dot Wallop-dot--2")
+						div(class="Wallop-dot Wallop-dot--3")
+						div(class="Wallop-dot Wallop-dot--4")
 						button(class="Wallop-buttonNext")
 				div(class="description")
 					h1(class="product__title") Current Elliott
