--- a/scss/_m-product.scss
+++ b/scss/_m-product.scss
@@ -86,8 +86,8 @@
 		}
 	}
 	&__sale {
-		width: $sale-width-mob;
-		height: $sale-height-mob;
+		width: $sale-width;
+		height: $sale-height;
 		padding: 14px 5px;
 
 		border-radius: 100%;
