--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -86,6 +86,7 @@ $product-price-font-size-tab: 14px;
 $product-new-price-font-size-tab: 24px;
 $product-price-font-size-mob: 14px;
 $product-new-price-font-size-mob: 24px;
+$sale-font-size: 18px;
 $sale-font-size-mob: 14px;
 $pick-color-font-size: 14px;
 $pick-color-font-size-tab: 12px;
@@ -152,5 +153,5 @@ $pick-color-height: 35px;
 $pick-size-width: 35px;
 $pick-size-height: 35px;
 
-$sale-width-mob: 45px;
-$sale-height-mob: 45px;
+$sale-width: 45px;
+$sale-height: 45px;
