--- a/views/index.pug
+++ b/views/index.pug
@@ -70,8 +70,10 @@ html(lang="en")
 					h1(class="product__title") Current Elliott
 						span(class="product__subtitle") Costa Patch Pocket Denim Top
 					div(class="price")
-						span(class="price--old") 30 000 грн
-						span(class="price--new") 15 000 грн
+						div(class="price__number")
+							span(class="price__number price--old") 30 000 грн
+							span(class="price__number price--new") 15 000 грн
+						div(class="price__sale") -50%
 					div(class="color")
 						span(class="color__text") Цвет: 
 						span(class="color__name") Синий
